# Network_disk_server

./: CMakeLists.txt  TcpServer_zh_CN.ts  cloud.db  config.qrc  main.cpp  mytcpserver.cpp  mytcpserver.h  mytcpsocket.cpp  mytcpsocket.h  opedb.cpp  opedb.h  protocol.cpp  protocol.h  tcpserver.cpp  tcpserver.h
